--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://moataz-bahaa.github.io/react-redux-todo",
+  "homepage": "https://moataz-bahaa.github.io/todo",
   "name": "todo-app",
   "version": "0.1.0",
   "private": true,
